# waypoint-global-planner

./: CMakeLists.txt  LICENSE  README.md  bgp_plugin.xml  package.xml
config/: base_global_planner_params.yaml
include/waypoint_global_planner/: waypoint_global_planner.h
src/: waypoint_global_planner.cpp
srv/: SetDirection.srv
